--- a/templates/store/clothes.html
+++ b/templates/store/clothes.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% for product in clothes %}
          <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="{{ product.image.url }}" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Product name: {{ product.name_of_product }}</h5>
             <p class="card-text">Product size: {{ product.size}}</p>
