--- a/templates/store/create_clothes.html
+++ b/templates/store/create_clothes.html
@@ -8,9 +8,9 @@
             <br>
         <div class="card">
             <div class="card-header">
-                <h3 class="text-center">Create Clothes</h3>
+                <h3 class="text-center">Create Clothes items</h3>
             </div>
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                <div class="card-body">
                    {{ form.as_p }}
