--- a/templates/store/clothes.html
+++ b/templates/store/clothes.html
@@ -13,13 +13,13 @@
             <a href="#" class="btn btn-primary">Add to cart</a>
         </div>
     </div>
-    <tr>
-    <th scope="row">1</th>
-    <td>{{ product.name_of_product }}</td>
-    <td>{{ product.price }}</td>
-    <td>{{ product.size }}</td>
-    <td>{{ product.availability_status }}</td>
-    <td>{{ product.prod_type }}</td>
-    <td>{{ product.description_of_product }}</td>
+{#    <tr>#}
+{#    <th scope="row">1</th>#}
+{#    <td>{{ product.name_of_product }}</td>#}
+{#    <td>{{ product.price }}</td>#}
+{#    <td>{{ product.size }}</td>#}
+{#    <td>{{ product.availability_status }}</td>#}
+{#    <td>{{ product.prod_type }}</td>#}
+{#    <td>{{ product.description_of_product }}</td>#}
     {% endfor %}
 {% endblock %}
