--- a/templates/store/create_accessories.html
+++ b/templates/store/create_accessories.html
@@ -8,7 +8,7 @@
             <br>
         <div class="card">
             <div class="card-header">
-                <h3 class="text-center">Create Accessory item</h3>
+                <h3 class="text-center">Create Accessory items</h3>
             </div>
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
@@ -23,4 +23,5 @@
         </div>
     </div>
 </div>
+
 {% endblock %}
