--- a/templates/store/all_products.html
+++ b/templates/store/all_products.html
@@ -8,8 +8,8 @@
                     <img src="{{ product.image.url }}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Product name: {{ product.name_of_product }}</h5>
-                        <p class="card-text">Product size: {{ product.size }}</p>
-                        <p class="card-text">Product Type: {{ product.prod_type }}</p>
+                        <p class="card-text">Size: {{ product.size }}</p>
+                        <p class="card-text">Type: {{ product.prod_type }}</p>
                         <p class="card-text">Availability: {{ product.availability_status }}</p>
                         <p class="card-text">Description {{ product.description_of_product }}</p>
                         <a href="#" class="btn btn-primary">Add to cart</a>
@@ -19,16 +19,16 @@
         {% endfor %}
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
-        {% for accessory in all_accessories %}
+        {% for accessory in accessories %}
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="{{ accessories.image.url }}" class="card-img-top" alt="...">
+                    <img src="{{ accessory.image.url }}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Product name: {{ accessory.name_of_product }}</h5>
-                        <p class="card-text">Product size: {{ accessory.price }}</p>
-                        <p class="card-text">Product Type: {{ accessory.prod_type }}</p>
-                        <p class="card-text">Product Type: {{ accessory.description }}</p>
-                        <a href="#" class="btn btn-primary">ADD</a>
+                        <p class="card-text">Price: {{ accessory.price }}</p>
+                        <p class="card-text">Type: {{ accessory.prod_type }}</p>
+                        <p class="card-text">Description: {{ accessory.description }}</p>
+                        <a href="#" class="btn btn-primary">Add to card</a>
                     </div>
                 </div>
             </div>
