--- a/templates/store/delete_clothes.html
+++ b/templates/store/delete_clothes.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+
+{% block title %} Delete - {{ storeclothes.name_of_product }} {% endblock %}
+
+{% block content %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                    <br><br>
+                    <div class="card">
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="card-body">
+                                <h3 class="text-center">Are you sure to delete {{ storeclothes.name_of_product }}?</h3>
+                            </div>
+                            <div class="card-footer text-center">
+                                <button type="submit" class="btn btn-success">Yes</button>
+                                <a href="{% url 'clothes' %}" class="btn btn-secondary">No</a>
+                            </div>
+                        </form>
+                    </div>
+            </div>
+        </div>
+    </div>
+
+
+{% endblock %}
