--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
-{#{% load static %}#}
+
 {% block title %} Home {% endblock %}
 
 {% block content %}
-
-<div class="container-fluid background-image">
-    <div class="row">
-        <div class="col-md-8 offset-md-2">
+    <div class="container-fluid bg-img-homepage">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <div style="width: 100vw; height: 100vh"><img src="" alt=""></div>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
+
