--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg " style="background-color: transparent">
+<nav class="navbar navbar-expand-lg " style="background-color: mintcream">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">ITW</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'homepage' %}">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -26,8 +26,7 @@
                         Store
                     </a>
                     <ul class="dropdown-menu">
-                        <li>
-                            <a class="dropdown-item" href="{% url 'all_products' %}">All Products</a>
+                        <li><a class="dropdown-item" href="{% url 'all_products' %}">All Products</a>
                         <li><a class="dropdown-item" href="{% url 'all_gender_clothes' %}">Clothes</a>
                             <ul class="dropdown-submenu">
                                 <li><a class="dropdown-item" href="{% url 'clothes' gender='F' %}">Women</a>
@@ -58,7 +57,7 @@
                                href="{% url 'accessories_by_name' acc_name='all' %}">Accessories</a>
                             <ul class="dropdown-submenu">
                                 <li><a class="dropdown-item"
-                                       href="{% url 'accessories_by_name' acc_name='Raycket' %}">Rackets</a>
+                                       href="{% url 'accessories_by_name' acc_name='Racket' %}">Rackets</a>
                                 </li>
                                 <li><a class="dropdown-item"
                                        href="{% url 'accessories_by_name' acc_name='Headband' %}">Headbands</a>
@@ -67,6 +66,23 @@
                         </li>
                         </li>
                     </ul>
+                </li>
+                {% if perms.store.add_storeclothes or perms.store.create_storeaccessories %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
+                        Administration
+                    </a>
+                    <ul class="dropdown-menu">
+                        <a href="{% url 'create_clothes' %}" class="btn btn-outline-success me-2">Add clothing product</a>
+                        <a href="{% url 'create_accessories' %}" class="btn btn-outline-success me-2">Add accesory product</a>
+                        {% endif %}
+{#                        <a href="{% url 'update_clothes' %}" class="btn btn-outline-success me-2">Update clothing product</a>#}
+{#                        <a href="{% url 'update_accessories' %}" class="btn btn-outline-success me-2">Update accesory product</a>#}
+{#                        <a href="{% url 'delete-clothes' %}" class="btn btn-outline-success me-2">Delete clothing product</a>#}
+{#                        <a href="{% url 'delete_accessories' %}" class="btn btn-outline-success me-2">Delete accesory product</a>#}
+                    </ul>
+                </li>
             </ul>
 
             {#            Shopping Cart#}
@@ -98,8 +114,6 @@
                 <a href="{% url 'login' %}" class="btn btn-outline-success me-2">Login</a>
                 <a href="{% url 'sign_up' %}" class="btn btn-outline-secondary">Sign up</a>
             {% endif %}
-{#            <a href="{% url 'create_clothes' %}" class="btn btn-outline-success me-2">Add clothes product</a>#}
-            <a href="{% url 'create_accessories' %}" class="btn btn-outline-success me-2">Add accesory product</a>
 
 
             {#            <form class="d-flex" role="search">#}
