--- a/templates/store/delete_clothes.html
+++ b/templates/store/delete_clothes.html
@@ -16,7 +16,7 @@
                             </div>
                             <div class="card-footer text-center">
                                 <button type="submit" class="btn btn-success">Yes</button>
-                                <a href="{% url 'clothes' %}" class="btn btn-secondary">No</a>
+{#                                <a href="{% url 'clothes' %}" class="btn btn-secondary">No</a>#}
                             </div>
                         </form>
                     </div>
