--- a/templates/store/clothes.html
+++ b/templates/store/clothes.html
@@ -10,16 +10,9 @@
             <p class="card-text">Product Type: {{ product.prod_type }}</p>
             <p class="card-text">Availability: {{ product.availability_status }}</p>
             <p class="card-text">Product size: {{ access.description_of_product}}</p>
-            <a href="#" class="btn btn-primary">Add to cart</a>
+            <a href="" class="btn btn-primary">Add to cart</a>
         </div>
     </div>
-{#    <tr>#}
-{#    <th scope="row">1</th>#}
-{#    <td>{{ product.name_of_product }}</td>#}
-{#    <td>{{ product.price }}</td>#}
-{#    <td>{{ product.size }}</td>#}
-{#    <td>{{ product.availability_status }}</td>#}
-{#    <td>{{ product.prod_type }}</td>#}
-{#    <td>{{ product.description_of_product }}</td>#}
+
     {% endfor %}
 {% endblock %}
