--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <nav class="navbar navbar-expand-lg " style="background-color: mintcream">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">ITW</a>
@@ -76,24 +78,22 @@
 
 
             <div class="btn-group">
-                <button type="button" class="btn btn-outline-warning "
-                        aria-expanded="false">
-                    Cart
-                </button>
-                <ul class="dropdown-menu">
-{#                    <li><a class="dropdown-item" href="{% url 'show_cart' %}">Cart</a></li>#}
-                </ul>
+                <a href="{% url 'show_cart' %}" aria-expanded="false">
+                    <img src="{% static 'images/shopping_cart_img.png' %}" style="width: 40px" class="rounded-circle">
+{#                    Cart#}
+                </a>
             </div>
 
             {#        Login and auth#}
 
             {% if request.user.is_authenticated %}
                 <div class="btn-group">
-                    <button type="button" class="btn btn-outline-warning dropdown-toggle" data-bs-toggle="dropdown"
+                    <a href="#" type="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                        My profile, {{ request.user.username }}
-                    </button>
-                    <ul class="dropdown-menu">
+{#                        My profile, {{ request.user.username }}#}
+                        <img src="{% static 'images/my_profile_icon.png' %}" style="width: 40px" class="rounded-circle">
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
                         <li><a class="dropdown-item" href="{% url 'password_change' %}">Change password</a></li>
                         <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                     </ul>
