--- a/templates/store/accessories.html
+++ b/templates/store/accessories.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Players {% endblock %}
+{% block title %} Accessories {% endblock %}
 {% block content %}
     {% for accessory in accessories %}
          <div class="card" style="width: 18rem;">
