--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--{#de intrebat trainer de unde preluam partea a 2-a din linkul de mai sus#}-->
     <link rel="stylesheet" href="{% static 'style/style.css' %}"/>
+    <script src="https://kit.fontawesome.com/12243e8866.js" crossorigin="anonymous"></script>
+    {#linkul de mai sus este pt a folosi icon din libraria font aswesome#}
 </head>
 <body>
 <div class="wrapper">
