--- a/static/style/style.css
+++ b/static/style/style.css
@@ -12,6 +12,20 @@ body, html {
     -moz-background-size: cover;
 }
 
+/*.card-img-top {*/
+/*    width: 100%;*/
+/*    height: 10vw;*/
+/*    object-fit: cover;*/
+/*}*/
+
+/*.product-item .card-thumb picture img {*/
+/*    z-index: 2;*/
+/*    width: 100%;*/
+/*    height: auto;*/
+/*    max-height: 400px;*/
+/*    object-fit: cover;*/
+/*    position: relative;*/
+/*    vertical-align: top;*/
 
 body{
     margin-top:20px;
