--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -79,7 +79,8 @@
 
             <div class="btn-group">
                 <a href="{% url 'show_cart' %}" aria-expanded="false">
-                    <img src="{% static 'images/shopping_cart_img.png' %}" style="width: 40px" class="rounded-circle">
+{#                    <img src="{% static 'images/shopping_cart_img.png' %}" style="width: 40px" class="rounded-circle">#}
+                    <i class="fa-solid fa-cart-shopping" style="font-size: 2rem; color:#000000;"></i>
 {#                    Cart#}
                 </a>
             </div>
