--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<nav class="navbar navbar-expand-lg " style="background-color: mintcream">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: mintcream">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">ITW</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
