--- a/static/style/style.css
+++ b/static/style/style.css
@@ -12,24 +12,9 @@ body, html {
     -moz-background-size: cover;
 }
 
-/*.card-img-top {*/
-/*    width: 100%;*/
-/*    height: 10vw;*/
-/*    object-fit: cover;*/
-/*}*/
-
-/*.product-item .card-thumb picture img {*/
-/*    z-index: 2;*/
-/*    width: 100%;*/
-/*    height: auto;*/
-/*    max-height: 400px;*/
-/*    object-fit: cover;*/
-/*    position: relative;*/
-/*    vertical-align: top;*/
 
 body{
-    margin-top:20px;
-    background:#eee;
+    background-color:#ffefeb;
 }
 .ui-w-40 {
     width: 40px !important;
@@ -51,3 +36,79 @@ body{
     box-shadow: 0 0 0 1px rgba(0,0,0,0.15) inset;
     vertical-align: middle;
 }
+
+/*FOOTER*/
+
+
+ .footer {
+     position: absolute;
+     color: black!important;
+     /*bottom: 0;*/
+     /*left: 0;*/
+     opacity: 0.7;
+     /*right: 0;*/
+     background-image: url("/static/images/tennis_img.jpg");
+     height: auto;
+     width: 100%;
+     font-family: "Open Sans", ui-sans-serif;
+     padding-top: 20px;
+     padding-left: 60px;
+     /*background-color: grey!important;*/
+ }
+
+ .footer-col {
+     width: 25%;
+     padding: 0 15px;
+ }
+
+ .footer-col h4 {
+     font-size: 18px;
+     color: black;
+     text-transform: capitalize;
+     margin-bottom: 35px;
+     font-weight: 500;
+     position: relative;
+ }
+
+ .footer-col h4::before {
+     content: '';
+     position: absolute;
+     left: 0;
+     bottom: -10px;
+     background-color: #cccc00;
+     height: 2px;
+     box-sizing: border-box;
+     width: 50px;
+ }
+
+ .footer-col ul li:not(:last-child) {
+     margin-bottom: 10px;
+ }
+
+ .footer-col ul li a {
+     font-size: 16px;
+     text-transform: capitalize;
+     color: black;
+     text-decoration: none;
+     font-weight: 300;
+     display: block;
+     transition: all 0.3s ease;
+ }
+
+ .footer-col ul li a:hover {
+     color: black;
+     padding-left: 8px;
+ }
+
+ .footer-col .social-links a {
+     display: inline-block;
+     height: 40px;
+     width: 40px;
+     background-color: rgba(255, 255, 255, 0.2);
+     margin: 0 10px 10px 0;
+     text-align: center;
+     line-height: 40px;
+     border-radius: 50%;
+     color: black;
+     transition: all 0.5s ease;
+ }
