--- a/templates/cart/delete_cart.html
+++ b/templates/cart/delete_cart.html
@@ -1,5 +1,27 @@
 {% extends 'base.html' %}
-{% block title %} Delete item from cart {% endblock %}
+
+
+{% block title %} Delete - {{ storeaccessories.name_of_product }} {% endblock %}
+
 {% block content %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                    <br><br>
+                    <div class="card">
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="card-body">
+                                <h3 class="text-center">Are you sure to delete {{ storeaccessories.name_of_product }}?</h3>
+                            </div>
+                            <div class="card-footer text-center">
+                                <button type="submit" class="btn btn-success">Yes</button>
+                            </div>
+                        </form>
+                    </div>
+            </div>
+        </div>
+    </div>
+
 
 {% endblock %}
