--- a/templates/cart/show_cart.html
+++ b/templates/cart/show_cart.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
-{% block title %} Show cart {% endblock %}
+{% block title %} Shopping cart {% endblock %}
 
 {% block content %}
 
 <div class="container px-3 my-5 clearfix">
     <!-- Shopping cart table -->
     <div class="card">
-        <div class="card-header">
+        <div class="card-header" style="color: coral">
             <h2>Shopping Cart</h2>
         </div>
         <div class="card-body">
@@ -27,22 +27,35 @@
                   <tr>
                     <td class="p-4">
                       <div class="media align-items-center">
+                          {% if item.clothes_id_id %}
                         <img src="{{ item.clothes_id.image.url }}" class="d-block ui-w-40 ui-bordered mr-4" alt="">
                         <div class="media-body">
                           <a href="#" class="d-block text-dark">{{ item }}</a>
                           <small>
                             <span class="text-muted">Color:</span>
                             <span class="ui-product-color ui-product-color-sm align-text-bottom" style="background:#e81e2c;"></span> &nbsp;
-                            <span class="text-muted">Size: </span> {{ item.clothes_size }} &nbsp;
-                            <span class="text-muted">Ships from: </span> China
+                            <span class="text-muted">Size: </span> {{ item.clothes_size }}
                           </small>
+                            {% else %}
+                            <img src="{{ item.accessories_id.image.url }}" class="d-block ui-w-40 ui-bordered mr-4" alt="">
+                        <div class="media-body">
+                          <a href="#" class="d-block text-dark">{{ item }}</a>
+                          <small>
+                            <span class="text-muted">Color:</span>
+                            <span class="ui-product-color ui-product-color-sm align-text-bottom" style="background:#e81e2c;"></span>
+                          </small>
+                            {% endif %}
                         </div>
                       </div>
                     </td>
-                    <td class="text-right font-weight-semibold align-middle p-4">{{ item.price }}</td>
+                    <td class="text-right font-weight-semibold align-middle p-4">{{ item.price }} RON</td>
                     <td class="align-middle p-4"><input type="text" class="form-control text-center" value="{{ item.number_of_products_added }}"></td>
                     <td class="text-right font-weight-semibold align-middle p-4">{{item.calculate_price}}</td>
-                    <td class="text-center align-middle px-0"><a href="#" class="shop-tooltip close float-none text-danger" title="" data-original-title="Remove">×</a></td>
+                      {% if item.clothes_id_id %}
+                    <td class="text-center align-middle px-0"><a href="{% url 'delete_cart_clothes' item.clothes_id_id %}" class="shop-tooltip close float-none text-danger" title="" data-original-title="Remove">×</a></td>
+                    {% else %}
+                    <td class="text-center align-middle px-0"><a href="{% url 'delete_cart_accesories' item.accessories_id_id %}" class="shop-tooltip close float-none text-danger" title="" data-original-title="Remove">×</a></td>
+                    {% endif %}
                   </tr>
                   {%  endfor %}
                 </tbody>
