--- a/templates/home/homepage.html
+++ b/templates/home/homepage.html
@@ -6,7 +6,7 @@
     <div class="container-fluid bg-img-homepage">
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <div style="width: 100vw; height: 100vh"><img src="" alt=""></div>
+                <div style="width: 100%; height: 100vh"><img src="" alt=""></div>
             </div>
         </div>
     </div>
