--- a/templates/store/all_products.html
+++ b/templates/store/all_products.html
@@ -9,21 +9,21 @@
                     <img src="{{ product.image.url }}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Product name: {{ product.name_of_product }}</h5>
+                        <p class="card-text">Price: {{ product.price }} lei</p>
                         <p class="card-text">Size: {{ product.size }}</p>
                         <p class="card-text">Color: {{ product.color }}</p>
                         <p class="card-text">Type: {{ product.prod_type }}</p>
-{#                        {% if umber_of_products > 5 %}#}
+{#                        {% if number_of_products > 0 and number_of_products < 5 %}#}
                         <p class="card-text" style="color: forestgreen">{{ product.availability_status }}</p>
 {#                        {% endif %}#}
-                        <p class="card-text">Description {{ product.description_of_product }}</p>
-                        <form method="post" action="{% url 'add_to_card' %}">
+                        <p class="card-text">Description: {{ product.description_of_product }}</p>
+                        <form method="post" action="{% url 'cart_add_clothes' product.id %}">
                             {% csrf_token %}
                             <input type="text" name="clothes_id" value={{ product }} hidden>
                             <button type="submit" class="btn btn-warning">
                             <i class="fa-solid fa-cart-shopping" style="font-size: 2rem"></i>
                             </button>
                         </form>
-
                     </div>
                 </div>
             </div>
@@ -36,16 +36,18 @@
                     <img src="{{ accessory.image.url }}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Product name: {{ accessory.name_of_product }}</h5>
-                        <p class="card-text">Price: {{ accessory.price }}</p>
+                        <p class="card-text">Price: {{ accessory.price }} lei</p>
+                        <p class="card-text">Color: {{ accessory.color }}</p>
                         <p class="card-text">Type: {{ accessory.prod_type }}</p>
-                        <p class="card-text">Description: {{ accessory.description }}</p>
-                        <form method="post" action="{% url 'add_to_card' %}">
+                        <p class="card-text" style="color: forestgreen">{{ accessory.availability_status }}</p>
+                        <p class="card-text">Description: {{ accessory.description_of_product }}</p>
+                        <form method="post" action="{% url 'cart_add_accesories' accessory.id %}">
                             {% csrf_token %}
                             <input type="text" name="clothes_id" value={{ accessory }} hidden>
                             <button type="submit" class="btn btn-warning">
                             <i class="fa-solid fa-cart-shopping" style="font-size: 2rem"></i>
                             </button>
-                        </form>>
+                        </form>
                     </div>
                 </div>
             </div>
